--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,9 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+h3 {
+    font-size: 1.2em;
+    text-align: center;
+    font-weight: bold;
+}
