--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,25 @@ h2 {
 }
 
 img {
-    margin: 0 auto;
     max-width: 100%;
-    height: auto;
+    height: auto; 
+    margin: 0 10em 5em 10em;
 }
 
 h3 {
     font-size: 1.2em;
     text-align: center;
     font-weight: bold;
+}
+
+.gallery-coffee {
+   text-align: center;
+}
+
+.gallery-star-mission-1 {
+    text-align: center;
+}
+
+.gallery-star-mission-2 {
+    text-align: center;
 }
