Commented out css for carousel

--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,9 @@ h3 {
     display: block;
 }
 
+/*
+css for carousel
+
 .carousel-item {
     text-align: center;
 }
@@ -81,4 +84,4 @@ h3 {
 
 .w-100 {
     width: 25%;
-}
+} */
