- made the logo link to index.html (similar perk most modern sites use) - made the navbar for index.html sticky, since  there is a lot of content (another perk most modern sites use)

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,12 @@ h3 {
     margin: 0 10em;
 }
 
+.sticky-navbar {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+
 .gallery-coffee {
    text-align: center;
 }
