- Deleted "~" separation markers - Planning on making it more professional by sparating with colored sections - Started making a div for the coffee section - Added a coffee like bg color and padding to make it a little bigger

--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,11 @@ h3 {
     z-index: 1000;
 }
 
+.coffee{
+    background-color: #A49393;
+    padding: 2.5em;
+}
+
 .gallery-coffee {
    text-align: center;
 }
