- Put "my portfolio" into a div with the class .into - This way could update the padding and font size - To make it more viewable and readable - Even update font size of the nav links to the sake of readablity

--- a/css/style.css
+++ b/css/style.css
@@ -43,10 +43,12 @@ h3 {
 .nav-link {
     text-decoration: none;
     color: #000;
-    font-size: 1.2em;
+    font-size: 1.3em;
     padding: 2em 1em;
     border-radius: 5px;
     transition: background-color 0.3s ease, color 0.3s ease;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
 }
 
 .nav-bar-background {
@@ -65,9 +67,16 @@ h3 {
     z-index: 1000;
 }
 
+.intro {
+    text-align: center;
+    padding: 3em;
+    font-size: 1.2em;
+}
+
 .coffee{
     background-color: #A49393;
     padding: 2.5em;
+    font-size: 1.2em;
 }
 
 .gallery-coffee {
