- Applied "star-mission" into it's own div to add css attributes - Deleted "p" statement, thought it was unnessary - Updated the padding for .coffee, .guitar, and .star-mission to 2.8em

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ h3 {
 
 .coffee{
     background-color: #A49393;
-    padding: 2.6em;
+    padding: 2.8em;
     font-size: 1.2em;
 }
 
@@ -85,7 +85,13 @@ h3 {
 
 .guitar {
     background-color: #f78879;
-    padding: 2.6em;
+    padding: 2.8em;
+    font-size: 1.2em;
+}
+
+.star-mission {
+    background-color: #d49fff;
+    padding: 2.8em;
     font-size: 1.2em;
 }
 
