- Added the last image in the img to random works section of index.html - Applied the need css for the img section

--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,10 @@ h3 {
     padding: 1em;
 }
 
+.gallery-random-works-10 {
+    padding: 1em;
+}
+
 .copyright {
     text-align: center;
     font-size: 0.9em;
