--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,17 @@ h3 {
     padding: 1em;
 }
 
+.about {
+    text-align: center;
+    padding: 3em 2.5em 1em 2.5em;
+    font-size: 1.2em;
+}
+
+.portrait-illustation-container {
+    text-align: left;
+    padding: 5em;
+}
+
 .copyright {
     text-align: center;
     font-size: 0.9em;
