--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ h1 {
 p {
     font-size: 1.2em;
     line-height: 1.5;
-    text-align: center;
 }
 
 h2 {
@@ -170,9 +169,25 @@ h3 {
     font-size: 1.2em;
 }
 
+.about-container {
+    display: grid;
+    align-items: center; 
+    grid-template-columns: 1fr 1fr;
+    column-gap: 5px;
+    margin-left: 3em;
+    margin-right: 5em;
+    padding-top: 1em;
+}
+
 .portrait-illustation-container {
-    text-align: left;
+    text-align: center;
     padding: 5em;
+}
+
+.about-statement {
+    padding: 3em 2.5em 1em 2.5em;
+    font-size: 1.2em;
+    font-weight: bold;
 }
 
 .copyright {
