--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,12 @@ h3 {
     font-weight: bold;
 }
 
+.contact {
+    text-align: center;
+    padding: 3em 2.5em 1em 2.5em;
+    font-size: 1.2em;
+}
+
 .copyright {
     text-align: center;
     font-size: 0.9em;
