- Updated the form to include formspree.io so the form is submitable - Updated the css of the form container including the text alignment, padding, and font size

--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,13 @@ h3 {
     font-size: 1.2em;
 }
 
+.contact-form-container {
+    text-align: center;
+    padding: 3em 2.5em 1em 2.5em;
+    font-size: 1.2em;
+    
+}
+
 .copyright {
     text-align: center;
     font-size: 0.9em;
